[gd_scene load_steps=32 format=2]

[ext_resource path="res://Scenes/Escolha.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Interface/Tela de Escolha de Personagens.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Interface/Menu/1 (2).png" type="Texture" id=3]
[ext_resource path="res://Sprites/Interface/Menu/4 (2).png" type="Texture" id=4]
[ext_resource path="res://Sprites/Interface/Menu/3 (2).png" type="Texture" id=5]
[ext_resource path="res://Sprites/Interface/Menu/2 (2).png" type="Texture" id=6]
[ext_resource path="res://Audios/Beep.wav-8a40c87ada5a0fb3b17e7da786a6259a.sample" type="AudioStream" id=7]
[ext_resource path="res://Sprites/Personagens/4 (1).png" type="Texture" id=8]
[ext_resource path="res://Sprites/Personagens/1 (1).png" type="Texture" id=9]
[ext_resource path="res://Sprites/Personagens/3 (1).png" type="Texture" id=10]
[ext_resource path="res://Sprites/Personagens/2 (1).png" type="Texture" id=11]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="StyleBoxEmpty" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[node name="Escolha" type="Node2D"]
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 2 )

[node name="FirstM" type="Sprite" parent="."]
position = Vector2( 242, 522 )
scale = Vector2( 0.514062, 0.603125 )
texture = ExtResource( 10 )

[node name="Original" type="Button" parent="."]
margin_left = 94.0
margin_top = 312.0
margin_right = 370.0
margin_bottom = 748.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )

[node name="SecondM" type="Sprite" parent="."]
position = Vector2( 703, 531.5 )
scale = Vector2( 0.499219, 0.601563 )
texture = ExtResource( 11 )

[node name="Homen2" type="Button" parent="."]
margin_left = 567.0
margin_top = 313.0
margin_right = 844.0
margin_bottom = 748.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )

[node name="ThirdF" type="Sprite" parent="."]
position = Vector2( 1193, 532.125 )
scale = Vector2( 0.466398, 0.527254 )
texture = ExtResource( 8 )

[node name="FourthF" type="Sprite" parent="."]
position = Vector2( 1669, 535 )
scale = Vector2( 0.446237, 0.51144 )
texture = ExtResource( 9 )

[node name="Mulher" type="Button" parent="."]
margin_left = 1049.0
margin_top = 312.0
margin_right = 1327.0
margin_bottom = 749.0
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/normal = SubResource( 15 )

[node name="Mulher2" type="Button" parent="."]
margin_left = 1521.0
margin_top = 309.0
margin_right = 1805.0
margin_bottom = 750.0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/focus = SubResource( 18 )
custom_styles/disabled = SubResource( 19 )
custom_styles/normal = SubResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="First" type="Sprite" parent="."]
visible = false
position = Vector2( 963.5, 540 )
scale = Vector2( 1.0026, 1.00556 )
texture = ExtResource( 3 )

[node name="Second" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 539 )
scale = Vector2( 1.0026, 1.00556 )
texture = ExtResource( 6 )

[node name="Third" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 539 )
scale = Vector2( 1.0026, 1.00556 )
texture = ExtResource( 5 )

[node name="Fourth" type="Sprite" parent="."]
visible = false
position = Vector2( 960, 538 )
texture = ExtResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[connection signal="mouse_entered" from="Original" to="." method="_on_Original_mouse_entered"]
[connection signal="mouse_exited" from="Original" to="." method="_on_Original_mouse_exited"]
[connection signal="pressed" from="Original" to="." method="_on_Original_pressed"]
[connection signal="mouse_entered" from="Homen2" to="." method="_on_Homen2_mouse_entered"]
[connection signal="mouse_exited" from="Homen2" to="." method="_on_Homen2_mouse_exited"]
[connection signal="pressed" from="Homen2" to="." method="_on_Homen2_pressed"]
[connection signal="mouse_entered" from="Mulher" to="." method="_on_Mulher_mouse_entered"]
[connection signal="mouse_exited" from="Mulher" to="." method="_on_Mulher_mouse_exited"]
[connection signal="pressed" from="Mulher" to="." method="_on_Mulher_pressed"]
[connection signal="mouse_entered" from="Mulher2" to="." method="_on_Mulher2_mouse_entered"]
[connection signal="mouse_exited" from="Mulher2" to="." method="_on_Mulher2_mouse_exited"]
[connection signal="pressed" from="Mulher2" to="." method="_on_Mulher2_pressed"]
